--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -35,7 +35,7 @@
               <label for="psw"><p>Mot de passe</p></label>
               <input type="password" name="psw" id="password" required>
                   
-              <button type="submit" onclick="login()">Se connecter</button>
+              <button type="submit" id="connect">Se connecter</button>
             </div>
           
             <div class="container">
