--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -8,27 +8,44 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
+	<script src="https://kit.fontawesome.com/db2f47b7f8.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
+<div class="edition invisible">
+	<span>
+		<i class="fa-solid fa-pen-to-square"></i>
+		<p>Modifier</p>
+	</span>
+	<button class="change">Publier les changements</button>
+</div>
 <header>
 	<h1>Sophie Bluel <span>Architecte d'inteérieur</span></h1>
 	<nav>
 		<ul>
 			<li><a href="#portfolio">projets</a></li>
 			<li><a href="#contact">contact</a></li>
-			<li><a href="./login.html">login</a></li>
+			<li><a href="./login.html" id="login">login</a></li>
+			<li><a href="./index.html" id="logout" class="invisible">logout</a></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
 </header>
 <main>
-
+	
 	<section id="introduction">
 		<figure>
 			<img src="./assets/images/sophie-bluel.png" alt="">
+			<span class="invisible">
+				<i class="fa-solid fa-pen-to-square"></i>
+				<p>Modifier</p>
+			</span>
 		</figure>
 		<article>
+			<span class="invisible">
+				<i class="fa-solid fa-pen-to-square"></i>
+				<p>Modifier</p>
+			</span>
 			<h2>Designer d'espace</h2>
 			<p>Je raconte votre histoire, je valorise vos idées. Je vous accompagne de la conception à la livraison finale du chantier.</p>
 			<p>Chaque projet sera étudié en commun, de façon à mettre en valeur les volumes, les matières et les couleurs dans le respect de l’esprit des lieux et le choix adapté des matériaux. Le suivi du chantier sera assuré dans le souci du détail, le respect du planning et du budget.</p>
@@ -36,8 +53,27 @@
 		</article>
 	</section>
 
+	
 	<section id="portfolio">
-		<h2>Mes Projets</h2>
+		<aside>
+			<h2>Mes Projets</h2>
+			<a href="#modal" class="js-modal">
+				<span class="invisible">
+					<i class="fa-solid fa-pen-to-square"></i>
+					<p>Modifier</p>
+				</span>
+			</a>
+		</aside>
+		<aside id="modal" class="modal1" style="display: none;">
+			<div class="modal-wrapper">
+				<button class="js-modal-close"><i class="fa-solid fa-x"></i></button>
+				<h2>Galerie</h2>
+				<div class="modal-gallery"></div>
+				<hr>
+				<button class="green">Ajouter une photo</button>
+				<p>Supprimer la gallerie</p>
+			</div>
+		</aside>
 		<div class="divcat"></div>
 		<div class="gallery">
 			
@@ -67,6 +103,6 @@
 	</nav>
 </footer>
 
-<script src="./main2.js"></script>
+<script src="./main.js"></script>
 </body>
 </html>
