--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -17,7 +17,7 @@
 		<ul>
 			<li><a href="./index.html">projets</a></li>
 			<li><a href="#">contact</a></li>
-			<li><a href="./login.html" id="login">login</a></li>
+			<li><a href="./login.html" id="login2">login</a></li>
 			<li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
 		</ul>
 	</nav>
