--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -67,11 +67,13 @@
 		<aside id="modal" class="modal1" style="display: none;">
 			<div class="modal-wrapper">
 				<button class="js-modal-close"><i class="fa-solid fa-x"></i></button>
-				<h2>Galerie</h2>
-				<div class="modal-gallery"></div>
-				<hr>
-				<button class="green">Ajouter une photo</button>
-				<p>Supprimer la gallerie</p>
+				<div class="align">
+					<h2>Galerie Photo</h2>
+					<div class="modal-gallery"></div>
+					<hr>
+					<button class="green">Ajouter une photo</button>
+					<p>Supprimer la gallerie</p>
+				</div>
 			</div>
 		</aside>
 		<div class="divcat"></div>
