--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -82,6 +82,8 @@
             </span>
           </a>
         </aside>
+
+        <!-- Affichage de la modal de la gallerie -->
         <article id="modal" class="modal1" style="display: none">
           <div class="modal-wrapper js-modal-stop">
             <div class="align">
@@ -96,6 +98,33 @@
             </div>
           </div>
         </article>
+
+        <!-- Affichage de la modal ajout de photo -->
+        <article id="modal" class="modal2" style="display: none">
+          <div class="modal-wrapper js-modal-stop">
+            <div class="align">
+              <button class="js-modal-close">
+                <i class="fa-solid fa-x"></i>
+              </button>
+              <h2>Ajout photo</h2>
+              <div class="modal-ajout-photo"></div>
+              <form action="#" method="post">
+                <label for="titre">Titre</label>
+                <input type="text" name="titre" id="titre" />
+                <label for="categorie">Catégorie</label>
+                <select name="categorie" id="category-select">
+                  <option value="">--Choisissez une catégorie--</option>
+                  <option value="1">Objets</option>
+                  <option value="2">Appartements</option>
+                  <option value="3">Hotels & restaurants</option>
+                </select>
+              </form>
+              <hr />
+              <button class="grey">Valider</button>
+            </div>
+          </div>
+        </article>
+
         <div class="divcat"></div>
         <div class="gallery"></div>
       </section>
