--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -93,7 +93,7 @@
               <h2>Galerie Photo</h2>
               <div class="modal-gallery"></div>
               <hr />
-              <button class="green">Ajouter une photo</button>
+              <button class="green js-modal2">Ajouter une photo</button>
               <p>Supprimer la gallerie</p>
             </div>
           </div>
@@ -107,13 +107,17 @@
                 <i class="fa-solid fa-x"></i>
               </button>
               <h2>Ajout photo</h2>
-              <div class="modal-ajout-photo"></div>
+              <div class="modal-ajout-photo">
+                <i class="fa-sharp fa-regular fa-image"></i>
+                <button class="blue">+ Ajouter photo</button>
+                <p>jpg, png : 4mo max</p>
+              </div>
               <form action="#" method="post">
                 <label for="titre">Titre</label>
                 <input type="text" name="titre" id="titre" />
                 <label for="categorie">Catégorie</label>
                 <select name="categorie" id="category-select">
-                  <option value="">--Choisissez une catégorie--</option>
+                  <option value=""> </option>
                   <option value="1">Objets</option>
                   <option value="2">Appartements</option>
                   <option value="3">Hotels & restaurants</option>
