--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -109,7 +109,9 @@
               <h2>Ajout photo</h2>
               <div class="modal-ajout-photo">
                 <i class="fa-sharp fa-regular fa-image"></i>
-                <button class="blue">+ Ajouter photo</button>
+                <input type="file" class="blue" id="importPhoto" accept="image/jpg, image/png" hidden>
+                <label for="importPhoto">+ Ajouter photo</label>
+                <!-- <button  onclick="inser_photo()">+ Ajouter photo</button> -->
                 <p>jpg, png : 4mo max</p>
               </div>
               <form action="#" method="post">
